--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,36 +2,80 @@ version: '3.8'
 
 services:
 
-    mongo:
+    mongo0:
         image: mongo:latest
-        restart: always
-        container_name: mongo-docker
-        environment:
-            MONGO_INITDB_ROOT_USERNAME: mongoadmin
-            MONGO_INITDB_ROOT_PASSWORD: mongoadmin
-            MONGO_INITDB_DATABASE: demodb
+        hostname: mongo0
+        container_name: mongo0
+        command: >
+            mongod
+            --replSet rs0
+            --bind_ip localhost,mongo0
         ports:
-            - "27017:27017"
+            - 27017:27017
+        restart: unless-stopped
+        volumes:
+            - ./data/db0:/data/db
         networks:
             - demo-tester-spring-mongodb
 
-    mongo-express:
-        image: mongo-express:latest
-        container_name: mongo-express
+    mongo1:
+        image: mongo:latest
+        hostname: mongo1
+        container_name: mongo1
+        command: >
+            mongod
+            --replSet rs0
+            --bind_ip localhost,mongo1
+        ports:
+            - 27018:27017
+        restart: unless-stopped
+        volumes:
+            - ./data/db1:/data/db
+        networks:
+            - demo-tester-spring-mongodb
+
+    mongo2:
+        image: mongo:latest
+        hostname: mongo2
+        container_name: mongo2
+        command: >
+            mongod
+            --replSet rs0
+            --bind_ip localhost,mongo2
+        ports:
+            - 27019:27017
+        restart: unless-stopped
+        networks:
+            - demo-tester-spring-mongodb
+
+    mongo-rs-init:
+        image: mongo:latest
+        container_name: mongo-rs-init
+        depends_on:
+            - mongo0
+            - mongo1
+            - mongo2
+        entrypoint: ["replica_set_init.sh"]
+        restart: on-failure
+        volumes:
+            - ./scripts/replica_set_init.sh:/usr/local/bin/replica_set_init.sh:ro
+        networks:
+            - demo-tester-spring-mongodb
+            
+    mongo-express-01:
+        image: "mongo-express:latest"
+        container_name: "mongo-express-01"
         restart: always
         ports:
             - "28081:8081"
-        environment:
-            ME_CONFIG_MONGODB_SERVER: mongo
-            ME_CONFIG_BASICAUTH_USERNAME: admin
-            ME_CONFIG_BASICAUTH_PASSWORD: changeme
-            ME_CONFIG_MONGODB_ADMINUSERNAME: mongoadmin
-            ME_CONFIG_MONGODB_ADMINPASSWORD: mongoadmin
-            ME_CONFIG_MONGODB_URL: mongo://mongoadmin:mongoadmin@mongo:27017/ 
-        depends_on:
-            - mongo
         networks:
             - demo-tester-spring-mongodb
+        depends_on: 
+            - "mongo0"
+            - "mongo1"
+            - "mongo2"
+        environment:
+            ME_CONFIG_MONGODB_URL: "mongodb://mongo0:27017,mongo1:27017,mongo2:27017/?replicaSet=rs0"
 
 networks:
     demo-tester-spring-mongodb:
