Move replica_set_init one dir up to be in same dir as its docker-compose.

--- a/compose/t1/docker-compose.yml
+++ b/compose/t1/docker-compose.yml
@@ -58,7 +58,7 @@ services:
         entrypoint: ["replica_set_init.sh"]
         restart: on-failure
         volumes:
-            - ./scripts/replica_set_init.sh:/usr/local/bin/replica_set_init.sh:ro
+            - ./replica_set_init.sh:/usr/local/bin/replica_set_init.sh:ro
         networks:
             - demo-tester-spring-mongodb
             
