--- a/compose/t1/docker-compose.yml
+++ b/compose/t1/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3.8'
 
 services:
 
-    mongo0:
+    mongodb1:
         image: mongo:latest
-        hostname: mongo0
-        container_name: mongo0
+        hostname: mongodb1
+        container_name: mongodb1
         command: >
             mongod
             --replSet rs0
-            --bind_ip localhost,mongo0
+            --bind_ip localhost,mongodb1
         ports:
             - 27017:27017
         restart: unless-stopped
@@ -18,14 +18,14 @@ services:
         networks:
             - demo-tester-spring-mongodb
 
-    mongo1:
+    mongodb2:
         image: mongo:latest
-        hostname: mongo1
-        container_name: mongo1
+        hostname: mongodb2
+        container_name: mongodb2
         command: >
             mongod
             --replSet rs0
-            --bind_ip localhost,mongo1
+            --bind_ip localhost,mongodb2
         ports:
             - 27018:27017
         restart: unless-stopped
@@ -34,27 +34,27 @@ services:
         networks:
             - demo-tester-spring-mongodb
 
-    mongo2:
+    mongodb3:
         image: mongo:latest
-        hostname: mongo2
-        container_name: mongo2
+        hostname: mongodb3
+        container_name: mongodb3
         command: >
             mongod
             --replSet rs0
-            --bind_ip localhost,mongo2
+            --bind_ip localhost,mongodb3
         ports:
             - 27019:27017
         restart: unless-stopped
         networks:
             - demo-tester-spring-mongodb
 
-    mongo-rs-init:
+    mongodb-rs-init:
         image: mongo:latest
-        container_name: mongo-rs-init
+        container_name: mongodb-rs-init
         depends_on:
-            - mongo0
-            - mongo1
-            - mongo2
+            - mongodb1
+            - mongodb2
+            - mongodb3
         entrypoint: ["replica_set_init.sh"]
         restart: on-failure
         volumes:
@@ -71,25 +71,25 @@ services:
         networks:
             - demo-tester-spring-mongodb
         depends_on: 
-            - "mongo0"
-            - "mongo1"
-            - "mongo2"
+            - "mongodb1"
+            - "mongodb2"
+            - "mongodb3"
         environment:
-            ME_CONFIG_MONGODB_URL: "mongodb://mongo0:27017,mongo1:27017,mongo2:27017/?replicaSet=rs0"
+            ME_CONFIG_MONGODB_URL: "mongodb://mongodb1:27017,mongodb2:27017,mongodb3:27017/?replicaSet=rs0"
 
     demospringmongobackend-01:
         image: orbartal/demo-mongo-spring-backend:latest
         hostname: demospringmongobackend
         container_name: demospringmongobackend-01
         depends_on:
-            - mongo0
-            - mongo1
-            - mongo2
+            - mongodb1
+            - mongodb2
+            - mongodb3
         ports:
             - 8080:8080
         environment:
         #MongoDB
-            - SPRING_DATA_MONGODB_URI=mongodb://mongo0:27017,mongo1:27017,mongo2:27017/?replicaSet=rs0
+            - SPRING_DATA_MONGODB_URI=mongodb://mongodb1:27017,mongodb2:27017,mongodb3:27017/?replicaSet=rs0
             - SPRING_DATA_MONGODB_DATABASE=demodb
             - SPRING_DATA_MONGODB_USERNAME=demouser
             - SPRING_DATA_MONGODB_PASSWORD=demopass
