Add to ignore the docker-compose auto-generate data files at t1

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-HELP.md
+
+### Auto generate files
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+compose/t1/data/*
 
 ### STS ###
 .apt_generated
